--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 id="title" >Stellar Transactions</h1>
 <body>
     
-    <div class="row justify-content-center">
+    <div>
         <ul id="transactions">
             
         </ul>
