--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>StellarX Team1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,13 +22,14 @@
                     <div class="col">
                         <h1 id="title" >Stellar Transactions</h1>
                     </div>
-                    <div class="col">
-                        <button id= "fetchButton" class="btn btn-primary">Fetch</button>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
+  <div>
+      <button id= "fetchButton" class="btn btn-primary">Fetch</button>
+  </div>
+
     <div class="row justify-content-center">
         <div class="card" style="width: 50rem;">
             <div class="card-body">
