Change button styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
             </div>
         </div>
-        <div id="rowBtn" class="row justify-content-center margin-top-sm">
+        <div id="rowBtn" class="row justify-content-center">
             <button id= "fetchButton" class="btn btn-primary">Fetch</button>
         </div>
     </div>
